Add category backend

--- a/_posts/2018-06-08-openid-connect-and-authenticating-against-ipsilon.html
+++ b/_posts/2018-06-08-openid-connect-and-authenticating-against-ipsilon.html
@@ -9,13 +9,9 @@ password: ''
 status: publish
 categories:
 - Google Summer of Code
+- backend
 tags: []
-meta:
-  _edit_last: '1'
-  _yoast_wpseo_content_score: '60'
-  _yoast_wpseo_primary_category: '34'
-  _oembed_2010f76b2d54d8a245d6a259917e4779: "{{unknown}}"
-  _oembed_7100613fb81254c22a7c7f0a9304e19a: "{{unknown}}"
+
 author:
   login: admin
   email: admin@annaphilips.com
