--- a/_posts/2018-06-27-fedmsg-on-centos.html
+++ b/_posts/2018-06-27-fedmsg-on-centos.html
@@ -9,17 +9,9 @@ password: ''
 status: publish
 categories:
 - Google Summer of Code
+- backend
 tags:
 - gsoc
-meta:
-  _edit_last: '1'
-  _yoast_wpseo_content_score: '60'
-  _yoast_wpseo_primary_category: '1'
-  _oembed_1cf21eeb32183220d87801a30f535322: "{{unknown}}"
-  _oembed_65af82bd6eb59c32df8d2a2113f8239c: "{{unknown}}"
-  _yoast_wpseo_focuskw_text_input: fedmsg
-  _yoast_wpseo_focuskw: fedmsg
-  _yoast_wpseo_linkdex: '55'
 author:
   login: admin
   email: admin@annaphilips.com
