--- a/_posts/2018-07-13-nginx-and-gunicorn.html
+++ b/_posts/2018-07-13-nginx-and-gunicorn.html
@@ -7,8 +7,7 @@ parent_id: '0'
 published: true
 password: ''
 status: publish
-categories:
-- backend
+categories: [backend]
 tags: []
 permalink: "/nginx-and-gunicorn/"
 ---
