--- a/backend.html
+++ b/backend.html
@@ -6,7 +6,7 @@ permalink: /archive/
 ---
 
 <div class="home">
-	{% for category in site.categories.Backend %}
+	{% for post in site.categories.backend %}
   <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
  {% endfor %}
 </div>
