Update posts with backend

--- a/_posts/2014-10-13-setting-up-dbvis-for-ubuntu-14-04-1.html
+++ b/_posts/2014-10-13-setting-up-dbvis-for-ubuntu-14-04-1.html
@@ -7,8 +7,7 @@ parent_id: '0'
 published: true
 password: ''
 status: publish
-categories:
-- Ubuntu
+categories: [Backend]
 tags:
 - dbvis
 - ubuntu
