--- a/_posts/2014-05-15-znc-adding-multiple-servers.html
+++ b/_posts/2014-05-15-znc-adding-multiple-servers.html
@@ -7,8 +7,7 @@ parent_id: '0'
 published: true
 password: ''
 status: publish
-categories:
-- Random
+categories: [Backend]
 tags: []
 meta:
   _edit_last: '1'
