--- a/_posts/2014-10-22-setting-up-trove-wtih-devstack.html
+++ b/_posts/2014-10-22-setting-up-trove-wtih-devstack.html
@@ -7,8 +7,7 @@ parent_id: '0'
 published: true
 password: ''
 status: publish
-categories:
-- OpenStack
+categories: [Backend]
 tags:
 - openstack
 - ubuntu
