--- a/_posts/2016-02-21-jenkins-docker-python.html
+++ b/_posts/2016-02-21-jenkins-docker-python.html
@@ -7,8 +7,7 @@ parent_id: '0'
 published: true
 password: ''
 status: publish
-categories:
-- python
+categories: [Backend]
 tags:
 - docker
 - jenkins
