--- a/_posts/2018-06-08-openid-connect-and-authenticating-against-ipsilon.html
+++ b/_posts/2018-06-08-openid-connect-and-authenticating-against-ipsilon.html
@@ -7,9 +7,7 @@ parent_id: '0'
 published: true
 password: ''
 status: publish
-categories:
-- Google Summer of Code
-- backend
+categories: [Backend]
 tags: []
 
 author:
